--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_screenutil: ^5.6.0
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
+  pinput: ^2.2.16
 
 dev_dependencies:
   flutter_test:
