--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
   pinput: ^2.2.16
+  modal_bottom_sheet: ^2.1.2
+  flutter_svg_provider: ^1.0.3
 
 dev_dependencies:
   flutter_test:
